tests/paczka1/small_fuzzy/32736041.err
Error in line 4: GBUH_DLmCxA S783 55,8
Error in line 5: S783 S783 23,9
Error in line 11: S783 S560 5,80
